Slight home page style fixes. Add boat page alignment centered.

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,7 +21,7 @@
 }
 
 .search {
-  margin-top: 14%;
+  margin-top: 16%;
   text-align: center;
 }
 
@@ -56,17 +56,14 @@
 }
 
 .tutorial-description {
-  //for Wed Demo only
   text-align: center;
-  margin-top: 18%;
-  //for Wed Demo only
   p {
     font-size: 26px;
     color: #BDBDBD;
   }
 
   h3 {
-    font-size: 38px;
+    font-size: 32px;
   }
 
   strong {
